--- a/Jump or Die 2/index.html
+++ b/Jump or Die 2/index.html
@@ -82,7 +82,7 @@
                             <button type="button" class="btn" id="btnHard" data-bs-toggle="modal"
                                 data-bs-target="#OnlineModal">Hard mode</button>
 
-                            <button type="button" class="btn" id="btnClose"
+                            <button type="button" class="btn close" id="btnClose"
                                 data-bs-dismiss="modal">Close</button>
                     </div>
                 </div>
