--- a/JumporDie/game.html
+++ b/JumporDie/game.html
@@ -5,7 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jump or die</title>
-
+</head>
+<body>
+    <div id="loading" class="loading">
+        <h2>Cargando...</h2>
+        <img src="./Assets/Imagenes/Loading_2.gif" alt="">
+    </div>
+    <div id="scene-section">
+        <div class="score">
+            <div class="player">
+                <img src="./Assets/Imagenes/avatar01.png" alt="">
+                <div  class="puntuacion">
+                    <h2 id="p1-nombre" class="nombre"></h2>
+                    <p>100</p>
+                </div>
+            </div>
+            <div  class="player dos">
+                <img src="./Assets/Imagenes/avatar02.png" alt="">
+                <div  class="puntuacion">
+                    <h2 id="p2-nombre" class="nombre">Rome</h2>
+                    <p>100</p>
+                </div>
+            </div>       
+        </div>
+    </div>
     <!-- Librerias necesarias -->
     <link rel="stylesheet" href="./css/game.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -21,6 +44,19 @@
     <script type="text/javascript"src="js/libs/inflate.min.js"></script>
     <script type="text/javascript"src="js/libs/Sky.js"></script>
     <script type="text/javascript"src="js/libs/Water.js"></script>
+
+
+    
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-database.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+        https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-analytics.js"></script>
+
+    <script src="./js/firebase.js"></script>
 
     <script type = "text/javascript">
 
@@ -630,29 +666,5 @@
         }
     
     </script>
-</head>
-<body>
-    <div id="loading" class="loading">
-        <h2>Cargando...</h2>
-        <img src="./Assets/Imagenes/Loading_2.gif" alt="">
-    </div>
-    <div id="scene-section">
-        <div class="score">
-            <div class="player">
-                <img src="./Assets/Imagenes/avatar01.png" alt="">
-                <div class="puntuacion">
-                    <h2 class="nombre">LordRikura</h2>
-                    <p>100</p>
-                </div>
-            </div>
-            <div class="player dos">
-                <img src="./Assets/Imagenes/avatar02.png" alt="">
-                <div class="puntuacion">
-                    <h2 class="nombre">Rome</h2>
-                    <p>100</p>
-                </div>
-            </div>       
-        </div>
-    </div>
 </body>
 </html>
