--- a/JumporDie/game.html
+++ b/JumporDie/game.html
@@ -17,7 +17,7 @@
                 <img src="./Assets/Imagenes/avatar01.png" alt="">
                 <div  class="puntuacion">
                     <h2 id="p1-nombre" class="nombre"></h2>
-                    <p>100</p>
+                    <p id="p1-score"></p>
                 </div>
             </div>
             <div  class="player dos">
@@ -44,13 +44,14 @@
     <script type="text/javascript"src="js/libs/inflate.min.js"></script>
     <script type="text/javascript"src="js/libs/Sky.js"></script>
     <script type="text/javascript"src="js/libs/Water.js"></script>
-
-
     
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-firestore.js"></script>
+
+    
 
     <!-- TODO: Add SDKs for Firebase products that you want to use
         https://firebase.google.com/docs/web/setup#available-libraries -->
