--- a/JumporDie/game.html
+++ b/JumporDie/game.html
@@ -23,8 +23,8 @@
             <div  class="player dos">
                 <img src="./Assets/Imagenes/avatar02.png" alt="">
                 <div  class="puntuacion">
-                    <h2 id="p2-nombre" class="nombre">Rome</h2>
-                    <p>100</p>
+                    <h2 id="p2-nombre" class="nombre"></h2>
+                    <p id ="p2-score"></p>
                 </div>
             </div>       
         </div>
