--- a/JumporDie/index.html
+++ b/JumporDie/index.html
@@ -74,10 +74,9 @@
 
                             <div class="bg"></div>
                         
-                            <button type="button" class="btn" id="btnSingle"
-                                data-bs-dismiss="modal">Single</button>
+                            <a href="singleplayer.html" type="button" class="btn" id="btnSingle">Single</a>
 
-                            <button type="button" class="btn" id="btnMultiplayer">Multiplayer</button>
+                            <a href="game.html" type="button" class="btn" id="btnMultiplayer">Multiplayer</a>
 
                             <button type="button" class="btn" id="btnHard" data-bs-toggle="modal"
                                 data-bs-target="#OnlineModal">Hard mode</button>
