--- a/JumporDie/game.html
+++ b/JumporDie/game.html
@@ -11,9 +11,11 @@
         .clasecentro{
             align-content: center;
             text-align: center;
+            border-color: white;
+            -webkit-text-stroke-width: .5px;
+            -webkit-text-stroke-color: white;
         }
     </style>
-
 </head>
 <body>
 
@@ -26,7 +28,7 @@
         <!--<div class="modal-header">
         <h4 class="modal-title">Modal title</h4>
         </div>-->
-        <div class="modal-body">
+        <div style="background-image: url(./Assets/Imagenes/winner.svg); background-repeat: no-repeat; background-size: 75%; background-position: 50%; padding: 10%;" class="modal-body">
             
             
             <h1 class="clasecentro">GANADOR</h1>
