--- a/JumporDie/game.html
+++ b/JumporDie/game.html
@@ -50,7 +50,7 @@
     data-size="large"><img style="width: 30%;" src="https://cdn.cms-twdigitalassets.com/content/dam/help-twitter/twitter_logo_blue.png.twimg.768.png"></img>
 Tweet</a>
 </div>
-        <button id="btnVolverAJugar"  type="button" class="btn btn-default" data-dismiss="modal">Volver a Jugar</button>
+        <button id="btnVolverAJugar"  type="button" class="btn btn-default" data-dismiss="modal">Volver al Menu</button>
         </div>
     </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
