--- a/JumporDie/singleplayer.html
+++ b/JumporDie/singleplayer.html
@@ -64,7 +64,7 @@
 Tweet</a>
         </div>
             
-        <button id="btnVolveraJugar" type="button" class="btn btn-default" data-dismiss="modal">Volver a Jugar</button>
+        <button id="btnVolveraJugar" type="button" class="btn btn-default" data-dismiss="modal">Volver al Menu</button>
         
         </div>
     </div><!-- /.modal-content -->
