--- a/JumporDie/ia.html
+++ b/JumporDie/ia.html
@@ -11,6 +11,9 @@
         .clasecentro{
             align-content: center;
             text-align: center;
+            border-color: white;
+            -webkit-text-stroke-width: .5px;
+            -webkit-text-stroke-color: white;
         }
     </style>
 
@@ -26,7 +29,7 @@
         <!--<div class="modal-header">
         <h4 class="modal-title">Modal title</h4>
         </div>-->
-        <div class="modal-body">
+        <div style="background-image: url(./Assets/Imagenes/winner.svg); background-repeat: no-repeat; background-size: 75%; background-position: 50%; padding: 10%;" class="modal-body">
             
             
             <h1 class="clasecentro">GANADOR</h1>
@@ -48,8 +51,7 @@
     data-size="large"><img style="width: 30%;" src="https://cdn.cms-twdigitalassets.com/content/dam/help-twitter/twitter_logo_blue.png.twimg.768.png"></img>
 Tweet</a>
 </div>
-        <button id="btnVolverAJugar"  type="button" class="btn btn-default" data-dismiss="modal">Volver a Jugar</button>
-        <button type="button"  class="btn btn-primary">Regresar Al Menu</button>
+        <button id="btnVolverAJugar"  type="button" class="btn btn-default" data-dismiss="modal">Volver al Menu</button>
         </div>
     </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
@@ -116,5 +118,12 @@ Tweet</a>
     <script src="./js/firebase.js"></script>
 
     <script type = "text/javascript" src="./js/ia.js"></script>
+
+
+
+
+
+
+
 </body>
 </html>
